upgrade jquery cdn and fix overlap with search result banner and result links

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -56,7 +56,7 @@ button.back-to-search:hover{
 #results-page {
     display: none;
     position: absolute;
-    top: 2%;
+    top: 15%;
     bottom: 15%;
     left: 0;
     right: 0;
@@ -67,13 +67,21 @@ button.back-to-search:hover{
 }
 
 .results-banner {
+    background-color: #f8f8ff;
+    left: 0;
+    margin-bottom: 0;
+    overflow: visible;
+    padding: 1rem;
     position: fixed;
     right: 0;
     top: 0;
-    left: 0;
-    padding: 1rem;
     text-align: center;
     width: 100%;
+}
+
+.search-results {
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .fa {
